manifests/silverbullet/manifests.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: silverbullet
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: silverbullet
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: silverbullet
    app.kubernetes.io/version: 0.7.7
    helm.sh/chart: silverbullet-0.4.2
  name: silverbullet
  namespace: silverbullet
spec:
  ports:
  - name: http
    port: 3000
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/instance: silverbullet
    app.kubernetes.io/name: silverbullet
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: silverbullet
    app.kubernetes.io/name: silverbullet
  name: silverbullet
  namespace: silverbullet
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: silverbullet
      app.kubernetes.io/name: silverbullet
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: silverbullet
        app.kubernetes.io/name: silverbullet
    spec:
      containers:
      - env: null
        image: zefhemel/silverbullet:2.12.0@sha256:1b97ce0f7b5085c76e0e9363c88ed97673db62a3b0f78c7bb12868827fff8b37
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /
            port: http
        name: silverbullet
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /
            port: http
        resources: {}
        securityContext: {}
        volumeMounts:
        - mountPath: /root/.ssh
          name: ssh
          readOnly: true
        - mountPath: /space
          name: data
      securityContext: {}
      serviceAccountName: silverbullet
      volumes:
      - name: ssh
        secret:
          defaultMode: 256
          secretName: silverbullet-ssh
      - name: data
        persistentVolumeClaim:
          claimName: silverbullet-data
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: local-ca-issuer
    kube-vip.io/loadbalancerIPs: 192.168.14.15
  name: silverbullet
  namespace: silverbullet
spec:
  ingressClassName: cilium
  rules:
  - host: silverbullet.nekropolis.irminsul
    http:
      paths:
      - backend:
          service:
            name: silverbullet
            port:
              number: 3000
        path: /
        pathType: Prefix
  - host: silverbullet.irminsul
    http:
      paths:
      - backend:
          service:
            name: silverbullet
            port:
              number: 3000
        path: /
        pathType: Prefix
  - host: sb.irminsul
    http:
      paths:
      - backend:
          service:
            name: silverbullet
            port:
              number: 3000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - sb.irminsul
    - silverbullet.irminsul
    - silverbullet.nekropolis.irminsul
    secretName: silverbullet-certificate
